@@ -1,3 +1,7 @@
+2008-12-01  Kevin B. Kenny  <kennykb@acm.org>
+
+	* generic/tdbcodbc.c (ConfigureConnection): Added '-timeout' option.
+	
 2008-11-30  Kevin B. Kenny  <kennykb@acm.org>
 
 	* configure.in: Changed PACKAGE_NAME to lowercase 'tdbcodbc'
